# rag-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_BRIEF.md  README.md  ROADMAP.md  pyproject.toml
src/rag_pipeline/: __init__.py  __main__.py  chunking.py  chunking_experiments.py  citations.py  embeddings.py  exceptions.py  extraction.py  generation.py  ingestion.py  model_profiles.py  reranking.py  retrieval.py  retrieval_evaluation.py  sparse_embeddings.py  vector_store.py
tests/: test_chunking.py  test_chunking_experiments.py  test_citations.py  test_embeddings.py  test_extraction.py  test_generation.py  test_ingestion.py  test_model_profiles.py  test_package.py  test_reranking.py  test_retrieval.py  test_retrieval_evaluation.py  test_sparse_embeddings.py  test_vector_store.py
