[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "A production-minded RAG pipeline built step by step."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0,<2.0",
    "langchain-huggingface>=1.2,<2.0",
    "langchain-qdrant>=1.1,<2.0",
    "langchain-text-splitters>=1.0,<2.0",
    "qdrant-client>=1.18,<2.0",
    "sentence-transformers>=5.2,<6.0",
    "sentencepiece>=0.2,<1.0",
    "transformers>=4.48,<5.0",
    "pypdf>=6.0,<7.0",
    "docx2txt>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
